# dpallets

devices/: Cargo.toml  README.md
devices/src/: lib.rs  mock.rs  tests.rs
